--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,12 +66,20 @@ services:
     #image: redis
     image: redis:alpine
     restart: always
+    volumes:
+      - "./data/redis:/data"
   postgres:
     #image: postgres
     image: postgres:11-alpine
     restart: always
+    volumes: 
+      - "./data//postgres:/var/lib/postgresql/data"
   s3:
     image: lphoward/fake-s3
+    #build: fakes3/
+    restart: always
+    volumes:
+      - "./data/fakes3/:/fakes3_root"
     env_file:
       - ./.env
     ports:
