--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     environment:
       - DEBUG="yes"
       - RUN_CELERY="yes"
+      - CELERY_BROKER_URL=redis://redis:6379/0
       - AWS_ENABLED=yes
       - EXPORT_ROOT=http://172.245.74.113:8003/export.cloudpebble.net/
       - AWS_S3_FAKE_S3=172.245.74.113:8003
