--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -4,7 +4,7 @@ amqp<2.0,>=1.4.9
 celery==3.1.23
 django-celery==3.1.17
 flup==1.0.3.dev-20110405
-psycopg2==2.8.3
+psycopg2>=2.8.3
 South==1.0.2
 qrcode==4.0.4
 Pillow==3.2.0
@@ -13,16 +13,16 @@ python-social-auth==0.1.23
 redis==2.10.5
 boto==2.39.0
 #boto3==1.4.4
-gevent>=1.3
-psycogreen>=1.0.1
+gevent==1.1
+psycogreen==1.0.1
 requests==2.22.0
 oauth2client==1.3
-django-bower==5.1.0
+django-bower==5.0.4
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
 dj-static==0.0.6
-gunicorn==19.5.0
+gunicorn==19.3.0
 dj-database-url==0.3.0
 newrelic==2.50.0.39
 
@@ -44,18 +44,8 @@ pyasn1-modules==0.0.5
 python-openid==2.2.5
 pytz==2016.3
 requests-oauthlib==0.6.1
-rsa==3.4.2
-six==1.12.0
+rsa==3.1.4
+six==1.10.0
 static3==0.6.1
-#django-redis==3.8.3
-#dj-redis-url==0.1.4
 python-memcached
-django-dotenv
-#django-uwsgi
-#django-websocket
-#django-compat
 
-
-#django-extensions==1.6.7
-#Werkzeug==0.16.0
-#pyOpenSSL==19.0.0
