--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,10 +1,10 @@
 Django==1.6.2
 django-registration==1.0
-amqp==1.4.4
+amqp<2.0,>=1.4.9
 celery==3.1.23
 django-celery==3.1.17
 flup==1.0.3.dev-20110405
-psycopg2==2.4.5
+psycopg2==2.8.2
 South==1.0.2
 qrcode==4.0.4
 Pillow==2.9.0
@@ -34,7 +34,7 @@ pypng==0.0.17
 
 # Additional requirements
 anyjson==0.3.3
-billiard==3.3.0.23
+billiard<3.4,>=3.3.0.23
 docopt==0.4.0
 greenlet==0.4.9
 httplib2==0.9.2
@@ -52,4 +52,4 @@ python-memcached
 #django-npm
 django-robots==3.0
 django-dotenv==1.4.1
-django-compat==1.1.3
+django-compat==1.0.13
